# merino

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  api.html  book.toml  bors.toml  crates.js  data.html  firefox.html  head_cargo.toml  index.html  intro.html  ops.html  print.html  search-index.js  searchindex.js  searchindex.json  settings.html  source-files.js  version.json
.cargo/: audit.toml
.circleci/: check-cargo-version.sh  config.yml
.github/: CODEOWNERS  dependabot.yml
actix_codec/: struct.BytesCodec.html  struct.Framed.html  trait.AsyncRead.html  trait.AsyncWrite.html  trait.Decoder.html  trait.Encoder.html
actix_cors/: all.html  enum.CorsError.html  index.html  struct.Cors.html
actix_http/: all.html  enum.KeepAlive.html  enum.Payload.html  enum.Protocol.html  enum.RequestHeadType.html  index.html  struct.Extensions.html  struct.HttpService.html  struct.HttpServiceBuilder.html  struct.Message.html  struct.Method.html  struct.Request.html  struct.RequestHead.html  struct.Response.html  struct.ResponseBuilder.html  struct.ResponseHead.html  struct.ServiceConfig.html  struct.StatusCode.html  struct.Uri.html  trait.HttpMessage.html
actix_macros/: all.html  attr.main.html  attr.test.html  index.html
actix_rt/: all.html  attr.main.html  attr.test.html  fn.spawn.html  index.html  macro.pin.html
actix_server/: all.html  index.html  struct.Server.html  struct.ServerBuilder.html
actix_service/: all.html  fn.apply.html  fn.apply_fn.html  fn.apply_fn_factory.html  fn.fn_factory.html  fn.fn_factory_with_config.html  fn.fn_service.html  fn.into_service.html  fn.map_config.html  fn.unit_config.html  index.html  macro.always_ready.html  macro.forward_ready.html  struct.ApplyTransform.html  struct.Pipeline.html  struct.PipelineFactory.html  trait.IntoService.html  trait.IntoServiceFactory.html  trait.Service.html  trait.ServiceExt.html  trait.ServiceFactory.html  trait.ServiceFactoryExt.html  trait.Transform.html  trait.TransformExt.html
actix_tls/: all.html  index.html
actix_utils/: all.html  index.html
actix_web/: all.html  attr.connect.html  attr.delete.html  attr.get.html  attr.head.html  attr.main.html  attr.options.html  attr.patch.html  attr.post.html  attr.put.html  attr.route.html  attr.trace.html  enum.Either.html  enum.EitherExtractError.html  index.html  macro.services.html  struct.App.html  struct.BaseHttpResponse.html  struct.Error.html  struct.HttpRequest.html  struct.HttpResponse.html  struct.HttpServer.html  struct.Resource.html  struct.Route.html  (+6 more)
merino/: Cargo.toml  all.html  fn.init_logging.html  fn.init_metrics.html  fn.main.html  index.html  sidebar-items.js
merino-adm/: Cargo.toml  README.md
merino-adm/src/: lib.rs  remote_settings.rs  server_side.rs
merino-adm/src/remote_settings/: client.rs  connection_pool.rs  mod.rs  reqwest_client.rs  soft_verifier.rs
merino-admin/: .gitignore  README.md  manage.py  pyproject.toml  setup.cfg
merino-admin/merino_admin/: asgi.py  settings.py  urls.py  wsgi.py
merino-admin/stubs/environ/: __init__.pyi
merino-admin/stubs/polymorphic/: admin.pyi  models.pyi
merino-admin/suggestion_providers/: admin.py  apps.py  models.py
merino-admin/suggestion_providers/migrations/: 0001_initial.py  0002_clientvariantswitchconfig.py
merino-cache/: Cargo.toml
merino-cache/proptest-regressions/: domain.txt
merino-cache/src/: deduped_map.rs  domain.rs  lib.rs  memory.rs
merino-cache/src/redis/: domain.rs  mod.rs
merino-dynamic-search/: Cargo.toml
merino-dynamic-search/src/: bin_indexer.rs  bin_searcher.rs  bin_versus_adm.rs  lib.rs
merino-integration-tests/: .gitignore  Cargo.toml
merino-integration-tests-macro/: Cargo.toml  README.md
merino-integration-tests-macro/src/: lib.rs
merino-integration-tests/src/: caching.rs  debug.rs  dockerflow.rs  general.rs  lib.rs  logging.rs  providers.rs  suggest.rs
merino-integration-tests/src/caching/: mod.rs  redis_tests.rs
merino-integration-tests/src/reconfigure/: mod.rs  redis.rs  remote_settings.rs
merino-integration-tests/src/utils/: logging.rs  metrics.rs  mod.rs  redis.rs  test_tools.rs
merino-settings/: Cargo.toml
merino-settings/src/: lib.rs  logging.rs  providers.rs  redis.rs
merino-suggest/: Cargo.toml
merino-suggest-providers/: Cargo.toml
merino-suggest-providers/src/: lib.rs  maker.rs  reconfigure.rs
merino-suggest-providers/src/providers/: client_variant_filter.rs  debug.rs  fixed.rs  id_multi.rs  keyword_filter.rs  live_query_demo.rs  mod.rs  multi.rs  stealth.rs  timeout.rs  wiki_es_demo.rs  wiki_open_search.rs  wikifruit.rs
merino-suggest-traits/: Cargo.toml
merino-suggest-traits/src/: device_info.rs  domain.rs  lib.rs
merino-suggest/src/: debug.rs  domain.rs  fixed.rs  id_multi.rs  keyword_filter.rs  lib.rs  metrics.rs  multi.rs  providers.rs  timeout.rs  wikifruit.rs
merino-suggest/src/providers/: client_variant_filter.rs  debug.rs  fixed.rs  id_multi.rs  keyword_filter.rs  multi.rs  stealth.rs  timeout.rs  wikifruit.rs
merino-web/: Cargo.toml  version.json
merino-web/src/: debug.rs  dockerflow.rs  errors.rs  extractors.rs  lib.rs  logging.rs  main.rs  middleware.rs  providers.rs  suggest.rs
merino-web/src/endpoints/: dockerflow.rs  mod.rs  providers.rs  suggest.rs
merino-web/src/middleware/: metrics.rs  mod.rs  sentry.rs
merino-wikipedia/: Cargo.toml
merino-wikipedia/src/: demo.rs  domain.rs  es_helper.rs  lib.rs
merino/docs/: index.html  sidebar-items.js
merino/docs/adrs/: index.html  sidebar-items.js
merino/docs/adrs/adr_0001_logging/: index.html
merino/docs/adrs/adr_0002_hashing/: index.html
merino/docs/api/: index.html
merino/docs/dev/: index.html
merino/docs/overview/: index.html
merino/docs/showroom/: index.html
merino/docs/testing/: index.html
merino/sentry/: fn.init_sentry.html  index.html  struct.SentryTracer.html
merino/src/: lib.rs  main.rs  sentry.rs
merino/src/docs/: api.rs  dev.rs  mod.rs  overview.rs  showroom.rs  testing.rs
merino/src/docs/adrs/: adr_0001_logging.rs  adr_0002_hashing.rs  mod.rs  template.md
(+61115 files in other folders)
