[package]
name = "merino-adm"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1"
futures = "0.3.14"
http = "0.2.4"
lazy_static = "1.4.0"
merino-settings = { path = "../merino-settings" }
merino-suggest = { path = "../merino-suggest" }
radix_trie = "0.2.1"
remote-settings-client = { git = "https://github.com/mozilla-services/remote-settings-client", rev = "06fbe92e3e45c42ff1bdd9b71ceda6e9e908a656" }
reqwest = { version = "0.11.3", features = ["json"] }
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
serde_qs = "0.8.3"
serde_with = "1.9"
tokio = { version = "1.8.2", features = ["rt", "macros", "rt-multi-thread"] }
thiserror = "1.0"
tracing = "0.1.26"
viaduct = { git = "https://github.com/mozilla/application-services", rev = "v75.0.0" }

[dev-dependencies]
actix-rt = "2.2"
pretty_assertions = "0.7.1"
fake = "2"
