[package]
name = "merino-adm"
version = "0.4.1"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1"
cadence = "0.26"
deduped-dashmap = { path = "../deduped-dashmap" }
futures = "0.3.14"
http = "0.2.4"
lazy_static = "1.4.0"
merino-settings = { path = "../merino-settings" }
merino-suggest = { path = "../merino-suggest" }
radix_trie = "0.2.1"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["rc"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
serde_qs = "0.8.3"
serde_with = "1.9"
thiserror = "1.0"
tokio = { version = "1.8.2", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.29"

[dev-dependencies]
actix-rt = "2.2"
fake = "2"
httpmock = "0.5.8"
pretty_assertions = "0.7.1"
