[package]
name = "merino-adm"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1"
cadence = "0.26"
deduped-dashmap = { path = "../deduped-dashmap" }
futures = "0.3.14"
http = "0.2.4"
lazy_static = "1.4.0"
merino-settings = { path = "../merino-settings" }
merino-suggest-traits = { path = "../merino-suggest-traits" }
num_cpus = "1.13.1"
reqwest = { version = "0.11.3", features = ["json"] }
sentry-anyhow = "0.26"
serde = { version = "1.0.125", features = ["rc"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
serde_with = "1.9"
thiserror = "1.0"
tokio = { version = "1.8.2", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.29"
remote-settings-client = { tag = "v1.1.1", git = "https://github.com/mozilla-services/remote-settings-client", features=["ring_verifier"] }

[dependencies.sentry]
version = "0.26"
default_features = false
features = ["backtrace", "contexts", "panic", "transport", "anyhow"]

[dev-dependencies]
actix-rt = "2.2"
fake = "2"
