[tool.poetry]
name = "merino-admin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MPLv2"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
django-polymorphic = "^3.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
django-stubs = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
