[package]
name = "merino-cache"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "^1"
async-trait = "^0.1"
merino-settings = { path = "../merino-settings" }
merino-suggest = { path = "../merino-suggest" }
redis = { version = "^0.20", features = ["tokio-comp", "connection-manager"] }
tokio = "^1"
tracing = "^0.1"
serde = "^1"
serde_json = "^1"
tracing-futures = "^0.2"
blake3 = "1"

[dev-dependencies]
proptest = "^1"
http = "^0.2"
