[package]
name = "merino-cache"
version = "0.5.0"
edition = "2018"

[dependencies]
anyhow = "^1"
arc-swap = "1.3.2"
async-trait = "^0.1"
blake3 = "1"
cadence = "0.26"
deduped-dashmap = { path = "../deduped-dashmap" }
fix-hidden-lifetime-bug = "0.2.4"
lazy_static = "1.4"
merino-settings = { path = "../merino-settings" }
merino-suggest = { path = "../merino-suggest" }
redis = { version = "^0.20", features = ["tokio-comp", "connection-manager"] }
serde = "^1"
serde_json = "^1"
tokio = { version = "1", features = ["time", "rt"] }
tracing = { version = "0.1", features = ["async-await"] }
tracing-futures = "^0.2"
uuid = "0.8"

[dev-dependencies]
http = "^0.2"
proptest = "^1"
fake = "2.4"
tokio = { version = "1", features = ["macros"] }
