[package]
name = "merino-dynamic-search"
version = "0.4.0"
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
merino-adm = { path = "../merino-adm" }
merino-settings = { path = "../merino-settings" }
tokio = { version = "1", features = ["rt"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.16"
indicatif = { version = "0.16", features = ["rayon"] }
rayon = "1"

[[bin]]
name = "dynamic-indexer"
path = "src/bin_indexer.rs"

[[bin]]
name = "dynamic-searcher"
path = "src/bin_searcher.rs"

[[bin]]
name = "dynamic-versus-adm"
path = "src/bin_versus_adm.rs"
