[package]
name = "merino-dynamic-search"
version = "0.4.0"
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
merino-adm = { path = "../merino-adm" }
merino-settings = { path = "../merino-settings" }
merino-suggest = { path = "../merino-suggest" }
tokio = { version = "1", features = ["rt"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.16"
indicatif = { version = "0.16", features = ["rayon"] }
rayon = "1"
async-trait = "0.1"
http = "0.2"
tracing = "0.1"

[[bin]]
name = "dynamic-indexer"
path = "src/bin_indexer.rs"

[[bin]]
name = "dynamic-searcher"
path = "src/bin_searcher.rs"

[[bin]]
name = "dynamic-versus-adm"
path = "src/bin_versus_adm.rs"
