[package]
name = "merino-integration-tests-macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "^1", features = ["full"] }

[dev-dependencies]
merino-integration-tests = { path = "../merino-integration-tests" }
parameterized = "0.3"
