[package]
name = "merino-integration-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
anyhow = "1.0.40"
deadpool = "^0.8"
httpmock = "0.5.8"
lazy_static = "^1.4.0"
maplit = "1.0.2"
merino-settings = { path = "../merino-settings" }
merino-web = { path = "../merino-web" }
redis = "^0.20"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "1.8.1"
tokio = "1.5.0"
tokio-test = "0.4.1"
tracing = "0.1.26"
tracing-futures = "0.2"
tracing-subscriber = "0.2.18"
viaduct = { git = "https://github.com/mozilla/application-services", rev = "v75.0.0" }
viaduct-reqwest = { git = "https://github.com/mozilla/application-services", rev = "v75.0.0" }
