[package]
name = "merino-settings"
version = "0.4.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
config = "0.11.0"
http = "0.2"
redis = "^0.20"
serde = { version = "1.0.125", features = ["derive"] }
serde_path_to_error = "0.1.4"
serde_with = "1.9"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["env-filter"] }

[dependencies.sentry]
# Pin Sentry to 0.19 until our on premise Sentry server upgrades to at least 20.6
version = "0.19"
default_features = false
features = ["backtrace", "contexts", "panic", "transport", "anyhow"]

[dev_dependencies]
parameterized = "0.3"
serde_json = "1"
