[package]
name = "merino-settings"
version = "0.5.1"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
config = { git = "https://github.com/mehcode/config-rs", branch = "master" }
http = "0.2"
redis = "^0.20"
reqwest = "0.11"
# Pin to 0.19 until our on premise server updates to >= 20.6.
sentry = "0.19"
serde = { version = "1.0.125", features = ["derive"] }
serde_path_to_error = "0.1.4"
serde_with = "1.9"
tracing = "0.1.29"
tracing-subscriber = { version = "0.2.18", features = ["env-filter"] }

[dev_dependencies]
httpmock = "0.6"
parameterized = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
