[package]
name = "merino-suggest"
version = "0.2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
http = "0.2.4"
merino-settings = { path = "../merino-settings" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.1"
thiserror = "1.0"
fake = { version = "2.4", features = ["derive"] }
rand = "0.8"
