[package]
name = "merino-web"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-cors = "0.6.0-beta.1"
actix-web = "=4.0.0-beta.8"
anyhow = "1.0.40"
futures-util = "0.3"
merino-adm = { path = "../merino-adm" }
merino-cache = { path = "../merino-cache" }
merino-settings = { path = "../merino-settings" }
merino-suggest = { path = "../merino-suggest" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["sync"] }
tokio-test = "0.4.1"
tracing = { version = "0.1.26", features = ["async-await"] }
tracing-actix-web-mozlog = "0.3"
tracing-futures = "0.2"
uuid = { version = "0.8.2", features = ["v4"] }
