[package]
name = "merino-web"
version = "0.3.0"
edition = "2018"

[dependencies]
actix-cors = "0.6.0-beta.1"
actix-web = "=4.0.0-beta.8"
actix-web-location = { version = "0.2", features = ["maxmind", "actix-web-v4", "cadence"] }
anyhow = "1.0.40"
async-recursion = "0.3"
backtrace = "0.3"
cadence = "0.26"
futures-util = "0.3"
lazy_static = "1.4.0"
merino-adm = { path = "../merino-adm" }
merino-cache = { path = "../merino-cache" }
merino-settings = { path = "../merino-settings" }
merino-suggest = { path = "../merino-suggest" }
# Pin sentry_backtrace to 0.19 until our on-premise server updates to 20.6.
sentry-backtrace = "0.19"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "1.9"
thiserror = "1.0.24"
tokio = { version = "1.8.2", features = ["sync"] }
tokio-test = "0.4.1"
tracing = { version = "0.1.26", features = ["async-await"] }
# Ideally we'd pin 0.3.1 here, but we cannot currently publish to
# cargo, so we resort to importing the specific git revision.
tracing-actix-web-mozlog = { git = "https://github.com/mozilla-services/common-rs", rev="f03409dda491ebbfe9753838fc2f2ea1226e06ca" }
tracing-futures = "0.2"
tracing-actix-web = "0.4.0-beta.9"
uuid = "0.8.2"
woothee = "0.11.0"

[dependencies.sentry]
# Pin Sentry to 0.19 until our on premise Sentry server upgrades to at least 20.6
version = "0.19"
default_features = false
features = ["backtrace", "contexts", "panic", "transport", "anyhow"]

[dev-dependencies]
actix-rt = "2.2.0"
pretty_assertions = "0.7"
