[package]
name = "merino-web"
version = "0.5.0"
edition = "2018"

[dependencies]
actix-cors = "0.6.0-beta.1"
actix-rt = "2.3"
actix-web = "=4.0.0-beta.15"
actix-web-location = { version = "0.5.0", features = ["maxmind", "actix-web-v4", "cadence"] }
anyhow = "1.0.40"
async-recursion = "0.3"
backtrace = "0.3"
cadence = "0.26"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4.0"
merino-adm = { path = "../merino-adm" }
merino-cache = { path = "../merino-cache" }
merino-settings = { path = "../merino-settings" }
merino-suggest = { path = "../merino-suggest" }
# Pin sentry_backtrace to 0.19 until our on-premise server updates to 20.6.
sentry-backtrace = "0.19"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "1.9"
thiserror = "1.0.24"
tokio = { version = "1.8.2", features = ["sync"] }
tokio-test = "0.4.1"
tracing = { version = "0.1.29", features = ["async-await"] }
tracing-actix-web-mozlog = "0.4.0"
tracing-futures = "0.2"
tracing-actix-web = "0.5.0-beta.6"
uuid = "0.8.2"
woothee = "0.11.0"

[dependencies.sentry]
# Pin Sentry to 0.19 until our on premise Sentry server upgrades to at least 20.6
version = "0.19"
default_features = false
features = ["backtrace", "contexts", "panic", "transport", "anyhow"]

[dev-dependencies]
actix-rt = "2.2.0"
pretty_assertions = "0.7"
