[package]
name = "merino-wikipedia"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
elasticsearch = "7.14.0-alpha.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_with = "1.11.0"
tokio = { version = "1.15.0", features = ["full"] }
merino-settings = { path = "../merino-settings" }

[[bin]]
name = "elasticsearch-demo"
path = "src/demo.rs"
