# A fake top-level package for documentation. No code should go here, and most
# documentation should be in the specific packages above.
[package]
name = "merino"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
anyhow = "1.0.40"
merino-web = { path = "../merino-web" }
merino-settings = { path = "../merino-settings" }
viaduct = { git = "https://github.com/mozilla/application-services", rev = "ab5f2120dc7b3de9384b3f1d5167efb8b3fabcd1"}
viaduct-reqwest = { git = "https://github.com/mozilla/application-services", rev = "ab5f2120dc7b3de9384b3f1d5167efb8b3fabcd1"}
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }
tracing = "0.1.26"
tracing-log = "0.1.2"
tracing-actix-web-mozlog = "0.3"
