# A fake top-level package for documentation. No code should go here, and most
# documentation should be in the specific packages above.
[package]
name = "merino"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
anyhow = "1.0.40"
cadence = "0.26"
merino-settings = { path = "../merino-settings" }
merino-web = { path = "../merino-web" }
tracing = "0.1.26"
tracing-actix-web-mozlog = "0.3"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }
viaduct = { git = "https://github.com/mozilla/application-services", rev = "v75.0.0" }
viaduct-reqwest = { git = "https://github.com/mozilla/application-services", rev = "v75.0.0" }
