# A fake top-level package for documentation. No code should go here, and most
# documentation should be in the specific packages above.
[package]
name = "merino"
version = "0.5.1"
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
anyhow = "1.0.40"
cadence = "0.26"
merino-settings = { path = "../merino-settings" }
merino-web = { path = "../merino-web" }
tracing = "0.1.29"
tracing-actix-web-mozlog = "0.4.0"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }

[dependencies.sentry]
# Pin Sentry to 0.19 until our on premise Sentry server upgrades to at least 20.6
version = "0.19"
default_features = false
features = ["backtrace", "contexts", "panic", "transport", "anyhow"]
